--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -1,3 +1,7 @@
 main {
- 
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(131,58,180);
 }
