--- a/src/templates/views/index.pug
+++ b/src/templates/views/index.pug
@@ -1,7 +1,7 @@
 //- index.pug page
 extends ../includes/_layout.pug
 block head
-	+head('404 - Not Found!')
+	+head('Simple Calc')
 block content
 	include ../components/_main.pug
 
