--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -1,6 +1,8 @@
 main {
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
     background: rgb(131,58,180);
