--- a/src/templates/views/index.pug
+++ b/src/templates/views/index.pug
@@ -1,5 +1,9 @@
 //- index.pug page
 extends ../includes/_layout.pug
+
+//- block variables
+//-    - var globalContent = "hola mundo"
+
 block head
 	+head('Simple Calc')
 block content
