add some advance calc

--- a/src/templates/components/_calculator.pug
+++ b/src/templates/components/_calculator.pug
@@ -9,15 +9,15 @@
         { text: "X!", type: "def", value:"fat" },
         { text: "√", type: "def", value:"sqrt" },
         { text: "Y√X", type: "both", value:"sqrtxy" },
-        { text: "e", type: "def", value:"const" },
+        { text: "e", type: "def", value:"e" },
         { text: "ln", type: "def", value:"loge" },
-        { text: "log", type: "def", value:"log" },
+        { text: "log10", type: "def", value:"log10" },
         { text: "sin", type: "def", value:"sin" },
         { text: "cos", type: "def", value:"cos" },
         { text: "tan", type: "def", value:"tan" },
         { text: "1/x", type: "both", value:"frat" },
         { text: "+/-", type: "both", value:"neg" },
-        { text: "PI", type: "def", value:"const" },
+        { text: "PI", type: "def", value:"pi" },
     ]
 
 include ../mixins/_button.pug
